--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 
   /* アニメーションのプロパティ */
   animation-name: ani-1;
-  animation-duration: 2.5s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
 }
 
@@ -21,7 +21,7 @@
   text-align: center;
 
   /* 一括指定（duration、delay以外は順不同）*/
-  animation: ani-1 2.5s infinite;
+  animation: ani-1 2s infinite;
 }
 
 /*
@@ -54,7 +54,7 @@
   text-align: center;
 
   animation-name: ani-2;
-  animation-duration: 2.5s;
+  animation-duration: 2s;
   animation-iteration-count: infinite;
 }
 
@@ -88,7 +88,7 @@ li {
   text-align: center;
   background-color: red;
 
-  animation: dan 5s infinite;
+  animation: dan 4s infinite;
 }
 
 #dap2 {
@@ -100,7 +100,7 @@ li {
   text-align: center;
   background-color: blue;
 
-  animation: dan 5s infinite;
+  animation: dan 4s infinite;
   animation-delay: 1s; /* 遅延のプロパティ */
 }
 
@@ -113,7 +113,7 @@ li {
   text-align: center;
   background-color: yellow;
 
-  animation: dan 5s 2s infinite; /* 一括指定。必ずdurationの後にdelay */
+  animation: dan 4s 2s infinite; /* 一括指定。必ずdurationの後にdelay */
 }
 
 @keyframes dan {
@@ -176,6 +176,27 @@ li {
 }
 
 @keyframes tfn {
+  from {
+    width: 0%;
+  }
+}
+
+/*
+-----------------------------------------------------------------
+  animation-timing-functionを表現するcubic-beziserの、線分の両端のハンドルの座標を指定する。それによりアニメーションの進捗を任意のカーブで制御できる
+  x,y軸ともに[0,1]範囲に収めるのが良い。
+*/
+
+#tfa6 {
+  width: 100%;
+  height: 2em;
+  background-color: #00aeef;
+
+  animation: tfn2 4s infinite;
+  animation-timing-function: cubic-bezier(0.9, 0.2, 0.25, 1);
+}
+
+@keyframes tfn2 {
   from {
     width: 0%;
   }
